# saes-as-vaes

./: .gitignore  1_5_4_Toy_Models_of_Superposition_&_SAEs_exercises.ipynb  README.md
experiments/: pyproject.toml  report.tex  requirements.txt
experiments/old_code/: smoke_test.py
experiments/old_code/configs/: base.yaml
experiments/old_code/saevae/: metrics.py  sae.py  train.py
experiments/reports/toy/: amortization_gap.csv  calibration.csv  ood_auroc.csv  pareto.csv  posterior_entropy.csv
experiments/saevae/: __init__.py  base.py  config.py  data.py  losses.py  normalize.py  seeding.py
experiments/saevae/analysis/: __init__.py
experiments/saevae/toy/: README.md  __init__.py  metrics.py  models.py  train.py
experiments/saevae/toy/experiments/: __init__.py  ambiguity.py  amortization_gap.py  calibration.py  ood.py  pareto.py  posterior_entropy.py
experiments/saevae/toy/notebooks/: 01_pareto_sweeps.ipynb  02_vae_beats_sae.ipynb  03_bayesian_findings.ipynb
notebooks/: sae_vae_toy_models.ipynb  vae_beats_sae_experiments (1).ipynb
